src/test/ui/issues/issue-64792-bad-unicode-ctor.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `X`
  --> $DIR/issue-64792-bad-unicode-ctor.rs:3:14
   |
LL | struct X {}
   | ----------- `X` defined here
LL | 
LL | const Y: X = X("รถ");
   |              ^^^^^^
   |
help: a constant with a similar name exists
   |
LL | const Y: X = Y("รถ");
   |              ^
help: use struct literal syntax instead
   |
LL | const Y: X = X {};
   |              ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
